--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Video Bookmarks",
   "version": "0.1.0",
-  "description": "Saving timestamps in YT videos",
+  "description": "Saving timestamps on videos",
   "permissions": ["storage", "tabs"],
   "host_permissions": ["https://*.youtube.com/*"],
   "background": {
